--- a/BaiTap/ss4/CV_ca_nhan.html
+++ b/BaiTap/ss4/CV_ca_nhan.html
@@ -16,5 +16,9 @@
     <div>
         <iframe width="942" height="530" src="https://www.youtube.com/embed/cZBsXJK6N0Y" title="(Talkshow) Bộ ảnh chuyến đi Cao Bằng và chuyện góp gạch xây trường đầy ý nghĩa." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+<p style="font-size: large; color: fuchsia">Ghi âm nếu có:</p>
+    <div>
+        <iframe src="https://www.nhaccuatui.com/mh/auto/2yazdnbISYrU" width="620" height="382" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+    </div>
 </body>
 </html>
