--- a/BaiTap/ss4/CV_ca_nhan.html
+++ b/BaiTap/ss4/CV_ca_nhan.html
@@ -11,7 +11,7 @@
 </center>
 <p style="font-size: large;color: blue">Họ và tên: Nguyễn Văn A</p>
 <p style="font-size: large; color: blue">Quê quán: Hà Nội</p>
-<p style="font-size: large; color: blue;">Trinh độ học vấn: Đại học</p>
+<p style="font-size: large; color: blue;">Trình độ học vấn: Đại học</p>
 &nbsp<p style="font-size: large; color: fuchsia">Video giới thiệu:</p>
     <div>
         <iframe width="942" height="530" src="https://www.youtube.com/embed/cZBsXJK6N0Y" title="(Talkshow) Bộ ảnh chuyến đi Cao Bằng và chuyện góp gạch xây trường đầy ý nghĩa." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
