--- a/BaiTap/ss5/Form_dang_ky_nguoi_dung.html
+++ b/BaiTap/ss5/Form_dang_ky_nguoi_dung.html
@@ -16,7 +16,7 @@
             <input type="text" id="email">
         </div>
         <div id="num">
-            <h4>Số điện thoại</h4>
+            <h4>Số điện thoại:</h4>
             <input type="text" id="phone">
         </div>
         <div id="sex">
