--- a/BaiTap/ss5/tao_bang_don_gian.html
+++ b/BaiTap/ss5/tao_bang_don_gian.html
@@ -5,8 +5,8 @@
     <title>Thời khóa biểu</title>
 </head>
 <body>
-<h2 style="color: red" class="between">Thời khóa biểu lớp T0908I</h2>
-<table border="1">
+<h2 style="color: red" class="between" align="center">Thời khóa biểu lớp T0908I</h2>
+<table style="width: 400px"; align="center">
     <tr style="background: yellow">
         <th>Thứ 3</th>
         <th>Thứ 5</th>
@@ -23,5 +23,6 @@
         <td>C - T1,L1</td>
     </tr>
 </table>
+<link rel="stylesheet" href="Border.css">
 </body>
 </html>
