--- a/BaiTap/ss5/Form_don_gian.html
+++ b/BaiTap/ss5/Form_don_gian.html
@@ -5,6 +5,7 @@
     <title>Form đơn giản</title>
 </head>
 <body>
+<fieldset style="width: 450px">
 <table>
 <tr style="color: white; background: coral">
 <th class="Between" colspan="4">SỞ THÍCH CỦA BẠN</th>
@@ -39,5 +40,6 @@
         <th><input type="reset" value="Nhập lại"></th>
     </tr>
 </table>
+</fieldset>
 </body>
 </html>
