--- a/BaiTap/ss5/tao_bang_don_gian.html
+++ b/BaiTap/ss5/tao_bang_don_gian.html
@@ -8,16 +8,29 @@
 <h2 style="color: red" class="between" align="center">Thời khóa biểu lớp T0908I</h2>
 <table style="width: 400px"; align="center">
     <tr style="background: yellow">
+        <th colspan="3" ></th>
         <th>Thứ 3</th>
         <th>Thứ 5</th>
         <th>Thứ 7</th>
     </tr>
+    <tr>
+        <th>Tuần</th>
+        <th>Ngày bắt đầu</th>
+        <th>Ngày kết thúc</th>
+        <th colspan="3">Môn học</th>
+    </tr>
     <tr style="color: blueviolet; background: mistyrose">
+        <td>01</td>
+        <td>01/09/2009</td>
+        <td>05/09/2009</td>
         <td>CF - T1,L1</td>
         <td>CF - T2,L2</td>
         <td>CF - T3,L3</td>
     </tr>
     <tr style="color: blueviolet; background: mistyrose">
+        <td>02</td>
+        <td>08/09/2009</td>
+        <td>12/09/2009</td>
         <td>CF - T4,L4</td>
         <td>CF - Written Test</td>
         <td>C - T1,L1</td>
