--- a/BaiTap/ss5/tao_bang_don_gian.html
+++ b/BaiTap/ss5/tao_bang_don_gian.html
@@ -6,9 +6,22 @@
 </head>
 <body>
 <h2 style="color: red" class="between" align="center">Thời khóa biểu lớp T0908I</h2>
-<table style="width: 400px"; align="center">
+<table style="width: 500px" ; align="center" border="0">
+    <tr>
+        <td>LỚP: T09081</td>
+        <td style="text-align: right">Thời gian học 13h30 - 17h30</td>
+    </tr>
+    <tr>
+        <td>Giáo viên: KhoaNV</td>
+        <td style="text-align: right">Ngày học: Thứ 3 , 5 , 7</td>
+    </tr>
+    <tr>
+        <td>Phòng học: Class3/Lab3</td>
+    </tr>
+</table>
+<table style="width: 500px" ; align="center">
     <tr style="background: yellow">
-        <th colspan="3" ></th>
+        <th colspan="3"></th>
         <th>Thứ 3</th>
         <th>Thứ 5</th>
         <th>Thứ 7</th>
@@ -34,6 +47,14 @@
         <td>CF - T4,L4</td>
         <td>CF - Written Test</td>
         <td>C - T1,L1</td>
+    </tr>
+    <tr style="color: blueviolet; background: mistyrose">
+        <td>03</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
     </tr>
 </table>
 <link rel="stylesheet" href="Border.css">
