--- a/BaiTap/ss5/Form_don_gian.html
+++ b/BaiTap/ss5/Form_don_gian.html
@@ -2,44 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Form đơn giản</title>
+    <title>Thời khóa biểu</title>
 </head>
 <body>
-<fieldset style="width: 450px">
-<table>
-<tr style="color: white; background: coral">
-<th class="Between" colspan="4">SỞ THÍCH CỦA BẠN</th>
-</tr>
+<h2 style="color: red" class="between" align="center">Thời khóa biểu lớp T0908I</h2>
+<table style="color: blue" width="500px" align="center">
     <tr>
-    <th style="color: blue">Họ và Tên</th>
-    <th><input type="text" id="yourname"></th>
-    </tr>
-    </tr>
-    <th style="color: blue">Email</th>
-    <th><input type="text" id="email"></th>
+        <td>LỚP: T09081</td>
+        <td style="text-align: right">Thời gian học 13h30 - 17h30</td>
     </tr>
     <tr>
-        <th style="color: blue">Sở thích</th>
-        <td class="interests" style="color: coral"><input type="checkbox">Thể thao</td>
-        <td class="interests" style="color: coral"><input type="checkbox">Âm nhạc</td>
-        <td class="interests" style="color: coral"><input type="checkbox">Đọc sách</td>
+        <td>Giáo viên: KhoaNV</td>
+        <td style="text-align: right">Ngày học: Thứ 3 , 5 , 7</td>
     </tr>
     <tr>
-        <th></th>
-        <td class="interests" style="color: coral"><input type="checkbox">Lướt web</td>
-        <td class="interests" style="color: coral"><input type="checkbox">Chơi game</td>
-        <td class="interests" style="color: coral"><input type="checkbox">Điện ảnh</td>
-    </tr>
-    <tr>
-        <th></th>
-        <td class="interests" style="color: coral"><input type="checkbox">Du lịch</td>
-    </tr>
-    <tr>
-        <th></th>
-        <th><input type="submit" value="Gửi thông tin"></th>
-        <th><input type="reset" value="Nhập lại"></th>
+        <td>Phòng học: Class3/Lab3</td>
     </tr>
 </table>
-</fieldset>
+<table style="border-collapse:collapse" width="500px" align="center" border="1">
+    <tr style="background: yellow">
+        <th style="background: white" colspan="3"></th>
+        <th>Thứ 3</th>
+        <th>Thứ 5</th>
+        <th>Thứ 7</th>
+    </tr>
+    <tr style="background: orange">
+        <th>Tuần</th>
+        <th>Ngày bắt đầu</th>
+        <th>Ngày kết thúc</th>
+        <th colspan="3">Môn học</th>
+    </tr>
+    <tr style="color: black; background: white">
+        <td>01</td>
+        <td>01/09/2009</td>
+        <td>05/09/2009</td>
+        <td>CF - T1,L1</td>
+        <td>CF - T2,L2</td>
+        <td>CF - T3,L3</td>
+    </tr>
+    <tr style="color: black; background: white">
+        <td>02</td>
+        <td>08/09/2009</td>
+        <td>12/09/2009</td>
+        <td>CF - T4,L4</td>
+        <td>CF - Written Test</td>
+        <td>C - T1,L1</td>
+    </tr>
+    <tr style="color: black; background: white">
+        <td>03</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+    </tr>
+</table>
 </body>
 </html>
