--- a/BaiTap/ss7/ung_dung_chuyen_doi_tien_te/ung_dung_chuyen_doi_tien_te.html
+++ b/BaiTap/ss7/ung_dung_chuyen_doi_tien_te/ung_dung_chuyen_doi_tien_te.html
@@ -7,21 +7,21 @@
 <body>
 <table>
     <tr>
-        <th><label for="Amount">Amount</label></th>
+        <th><label for="amount">Amount</label></th>
         <th>From Currency</th>
         <th>To Currency</th>
         <th></th>
     </tr>
     <tr>
-        <td><input type="number" id="Amount"></td>
+        <td><input type="number" id="amount"></td>
         <td>
-            <select id="From">
+            <select id="from">
                 <option value="VND">VND</option>
                 <option value="USD">USD</option>
             </select>
         </td>
         <td>
-            <select id="To">
+            <select id="to">
                 <option value="VND">VND</option>
                 <option  value="USD">USD</option>
             </select>
@@ -30,7 +30,7 @@
     </tr>
 </table>
 <br>
-<p id="Result"></p>
+<p id="result"></p>
 <script src="chuyen_doi_tien_te.js"></script>
 </body>
 </html>
