--- a/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_7.html
+++ b/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_7.html
@@ -13,8 +13,8 @@
         let x2;
         let delta = b*b-4*a*c;
         if(delta == 0){
-            x1=-b/2*a;
-            alert(x1);
+            x1=(-b)/2*a;
+            alert('Phương trình cò nghiệm kép ' +x1);
         }
         else if (delta<0){
             alert('Phương trình vô nghiệm');
