--- a/BaiTap/ss10/vong_lap_1/vong_lap_1_bai_1.html
+++ b/BaiTap/ss10/vong_lap_1/vong_lap_1_bai_1.html
@@ -13,7 +13,7 @@
                 alert('Bạn đã hoàn thành')
                 break;
             }
-        }
+        } alert(a);
         document.getElementById('bai_1').innerHTML=a;
     </script>
 </body>
