--- a/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_12.html
+++ b/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_12.html
@@ -17,7 +17,7 @@
         } else {
             alert('Số tiền không hợp lệ ');
         }
-        document.write('Số tiền lại nhận được: ' +lai);
+        document.write('Số tiền lãi nhận được: ' +lai);
     </script>
 </body>
 </html>
