--- a/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_8.html
+++ b/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_8.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <script>
-        let a= +prompt('Nhập vào số a: ');
-        if (a>0 && a<120){
+        let age= +prompt('Nhập vào số a: ');
+        if (age>0 && a<120){
             alert('Đây là tuổi của một người');
         }
         else {
