--- a/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_11.html
+++ b/BaiTap/ss9/cau_truc_dieu_kien_2/cau_truc_dieu_kien_2_bai_11.html
@@ -6,31 +6,30 @@
 </head>
 <body>
 <script>
-    let thunhap = +prompt('Nhập thu nhập cá nhân ')
+    let thuNhap = +prompt('Nhập thu nhập cá nhân ')
     let vat;
-    if (thunhap>80000000) {
-        vat = thunhap*35/100-9850000;
+    if (thuNhap > 80000000) {
+        vat = thuNhap * 35 / 100 - 9850000;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    } else if (thunhap>52000000) {
-        vat = thunhap*30/100-5850000;
+    } else if (thuNhap > 52000000) {
+        vat = thuNhap * 30 / 100 - 5850000;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    } else if (thunhap>32000000) {
-        vat = thunhap*25/100-3250000;
+    } else if (thuNhap > 32000000) {
+        vat = thuNhap * 25 / 100 - 3250000;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    } else if (thunhap>18000000) {
-        vat = thunhap*20/100-1650000;
+    } else if (thuNhap > 18000000) {
+        vat = thuNhap * 20 / 100 - 1650000;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    } else if (thunhap>10000000) {
-        vat = thunhap*15/100-750000;
+    } else if (thuNhap > 10000000) {
+        vat = thuNhap * 15 / 100 - 750000;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    } else if (thunhap>5000000) {
-        vat = thunhap*10/100-250000;
+    } else if (thuNhap > 5000000) {
+        vat = thuNhap * 10 / 100 - 250000;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    } else if (thunhap>0) {
-        vat = thunhap*5/100 ;
+    } else if (thuNhap > 0) {
+        vat = thuNhap * 5 / 100;
         alert('Số tiền thuế phải đóng là: ' + vat);
-    }
-    else {
+    } else {
         alert('Nhập thu nhập không hợp lệ');
     }
 </script>
