--- a/BaiTap/ss10/bang_cuu_chuong.html
+++ b/BaiTap/ss10/bang_cuu_chuong.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <h2>Bảng Cửu Chương</h2>
-    <script>
-        let multiplication_table, i, j;
-        multiplication_table= '<table border="2" cellspacing="1" cellpadding="4">';
-        for (i=1; i<=9; i++){
-            multiplication_table= multiplication_table+'<tr>';
-            for (j=2; j<10; j++){
-                multiplication_table= multiplication_table+'<td>'+ j + 'x' + i + '=' + i*j + '</td>';
-            }
-            multiplication_table= multiplication_table+ '</tr>';
+<script>
+    let multiplicationTable, i, j;
+    multiplicationTable = '<table border="2" cellspacing="1" cellpadding="4" style="color: red">';
+    for (i = 1; i <= 9; i++) {
+        multiplicationTable = multiplicationTable + '<tr>';
+        for (j = 2; j < 10; j++) {
+            multiplicationTable = multiplicationTable + '<td>' + j + 'x' + i + '=' + i * j + '</td>';
         }
-        multiplication_table= multiplication_table+ '</table>';
-        document.write(multiplication_table);
-    </script>
+        multiplicationTable = multiplicationTable + '</tr>';
+    }
+    multiplicationTable = multiplicationTable + '</table>';
+    document.write(multiplicationTable);
+</script>
 </body>
 </html>
