--- a/BaiTap/ss10/vong_lap_1/vong_lap_1_bai_1.html
+++ b/BaiTap/ss10/vong_lap_1/vong_lap_1_bai_1.html
@@ -5,16 +5,17 @@
     <title>Vòng lặp đếm từ 1 đến 100</title>
 </head>
 <body>
-    <script>
-        let a='';
-        for (let i=1;i<=100;i++){
-            a= a + i.toString()+' ';
-            if (i==99){
-                alert('Bạn đã hoàn thành')
-                break;
-            }
-        } alert(a);
-        document.getElementById('bai_1').innerHTML=a;
-    </script>
+<script>
+    let a = '';
+    for (let i = 1; i <= 100; i++) {
+        a = a + i.toString() + ' ';
+        if (i == 99) {
+            alert('Bạn đã hoàn thành')
+            break;
+        }
+    }
+    alert(a);
+    document.getElementById('bai_1').innerHTML = a;
+</script>
 </body>
 </html>
