--- a/BaiTap/ss10/vong_lap_1/vong_lap_1_bai_1.html
+++ b/BaiTap/ss10/vong_lap_1/vong_lap_1_bai_1.html
@@ -6,16 +6,13 @@
 </head>
 <body>
 <script>
-    let a = '';
     for (let i = 1; i <= 100; i++) {
-        a = a + i.toString() + ' ';
+        document.write(i + '<br>');
         if (i == 99) {
-            alert('Bạn đã hoàn thành')
+            document.write('Bạn đã hoàn thành');
             break;
         }
     }
-    alert(a);
-    document.getElementById('bai_1').innerHTML = a;
 </script>
 </body>
 </html>
