--- a/BaiTap/ss11/luyen_tap_mang_1/bai_6.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_6.html
@@ -6,6 +6,18 @@
 </head>
 <body>
 <script>
+    let arr = [];
+    let find;
+    for (let i = 1; i<=10;i++){
+        arr[i]= +prompt('Nhập phần tử thứ ' + i);
+    }
+    let v = +prompt('Nhập phần tử vần tìm ');
+    find = arr.indexOf(v.toString());
+    if (find>-1){
+        document.write(v+'&nbsp'+'is in the array');
+    }else {
+        document.write(v+'&nbsp'+'is not in the array');
+    }
 
 </script>
 </body>
