--- a/BaiTap/ss10/vong_lap_2/vong_lap_2_bai_4.html
+++ b/BaiTap/ss10/vong_lap_2/vong_lap_2_bai_4.html
@@ -11,7 +11,7 @@
     for (i = 1; i <= 7; i++) {
         if (i == 1 || i == 7) {
             for (j = 1; j <= 21; j++) {
-                result = result + '*'
+                result = result + '*';
             }
             result = result + '<br>'
         } else {
