--- a/BaiTap/ss10/bang_cuu_chuong.html
+++ b/BaiTap/ss10/bang_cuu_chuong.html
@@ -7,11 +7,11 @@
 <body>
 <h2>Bảng Cửu Chương</h2>
 <script>
-    let multiplicationTable, i, j;
+    let multiplicationTable;
     multiplicationTable = '<table border="2" cellspacing="1" cellpadding="4" style="color: red">';
-    for (i = 1; i <= 9; i++) {
+    for (let i = 1; i <= 9; i++) {
         multiplicationTable = multiplicationTable + '<tr>';
-        for (j = 2; j < 10; j++) {
+        for (let j = 2; j < 10; j++) {
             multiplicationTable = multiplicationTable + '<td>' + j + 'x' + i + '=' + i * j + '</td>';
         }
         multiplicationTable = multiplicationTable + '</tr>';
