--- a/BaiTap/ss11/luyen_tap_mang_2/bai_5.html
+++ b/BaiTap/ss11/luyen_tap_mang_2/bai_5.html
@@ -22,7 +22,7 @@
             }
         }
         if (kiemTra){
-            document.write('Hai mảng giống nhau')
+            document.write('Hai mảng giống nhau');
         }
     }
 </script>
