--- a/BaiTap/ss11/luyen_tap_mang_1/bai_8.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_8.html
@@ -6,9 +6,6 @@
 </head>
 <body>
 <script>
-    // function (){
-    //
-    // }
     let arr = [];
     for (let i=1;i<=10;i++){
         arr[i]=+prompt('Nhập phần tử thứ ' + i);
@@ -16,7 +13,7 @@
     arr.reverse(function (arr,b) {
         return b-arr;
     })
-    document.write(arr)
+    document.write(arr);
 </script>
 </body>
 </html>
