--- a/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
@@ -16,8 +16,8 @@
         if (i == 1)
             max = +a[1];
         if (+a[i] > max)
-            max = +a[i]
-        dem += +a[i]
+            max = +a[i];
+        dem += +a[i];
     }
     document.getElementById('bai3').innerHTML = 'So lon nhat: ' + max + ', trung binh cong: ' + dem / 10;
 
