--- a/BaiTap/ss11/luyen_tap_mang_2/bai_2.html
+++ b/BaiTap/ss11/luyen_tap_mang_2/bai_2.html
@@ -8,10 +8,13 @@
 <script>
     let arr = [];
     let n = +prompt('Nhập số phần tử ');
+    while (isNaN(n)) {
+        n = +prompt('Nhập số phần tử ');
+    }
     for (let i = 0; i < n; i++) {
         arr[i] = prompt('Nhập phần tử thứ ' + i);
     }
-    document.write('Dãy ban đầu: '+ arr.sort() +'<br>');
+    document.write('Dãy ban đầu: ' + arr.sort() + '<br>');
     document.write('Dãy sau khi đảo ngược: ' + arr.reverse());
 </script>
 </body>
