--- a/BaiTap/ss11/luyen_tap_mang_2/bai_4.html
+++ b/BaiTap/ss11/luyen_tap_mang_2/bai_4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let chain = prompt('Nhập vào các chỗi ký tự');
+    let chain = prompt('Nhập vào các chuỗi ký tự');
     let dem = 0;
     let a = chain.split('');
     for (let i = 0; i < a.length; i++) {
@@ -14,7 +14,8 @@
             dem++;
         }
     }
-    document.write('có ' + dem + ' từ trong chuỗi');
+    document.write('Chuỗi vừa nhập là: ' +chain +'<br>' );
+    document.write('Có ' + dem + ' từ trong chuỗi');
 </script>
 </body>
 </html>
