--- a/BaiTap/ss11/su_dung_ham_co_san/bai_2.html
+++ b/BaiTap/ss11/su_dung_ham_co_san/bai_2.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let str = +prompt('nhập độ dài mảng: ');
+    let doDaiMang = +prompt('nhập độ dài mảng: ');
     let arr = [];
-    for (let i = 0; i < str; i++) {
+    for (let i = 0; i < doDaiMang; i++) {
         arr[i] = +prompt('nhập số thứ' + i + 'của mảng');
     }
     for (let i = 0; i < arr.length; i++) {
