--- a/BaiTap/ss11/luyen_tap_mang_1/bai_2.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_2.html
@@ -19,7 +19,7 @@
             dem = i;
         }
     }
-    document.getElementById('bai_2').innerHTML = 'số lớn nhất là: ' + max + ' nằm ở vị trí ' + dem;
+    document.getElementById('bai_2').innerHTML = 'số lớn nhất là: ' + max + '<br>' + ' nằm ở vị trí ' + dem;
 </script>
 </body>
 </html>
