--- a/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
@@ -21,7 +21,7 @@
         dem += +a[i];
     }
     dem=dem/n;
-    document.getElementById('bai3').innerHTML = 'So lon nhat: ' + max + ', trung binh cong: ' + dem ;
+    document.getElementById('bai3').innerHTML = 'Số lớn nhất: ' + max + '<br>' + 'Trung bình cộng: ' + dem ;
 
 </script>
 </body>
