--- a/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
@@ -15,10 +15,10 @@
     for (i = 1; i <= n; i++) {
         a[i] = +prompt('nhap so thu ' + i);
         if (i == 1)
-            max = +a[1];
-        if (+a[i] > max)
-            max = +a[i];
-        dem += +a[i];
+            max = a[1];
+        if (a[i] > max)
+            max = a[i];
+        dem += a[i];
     }
     dem=dem/n;
     document.getElementById('bai3').innerHTML = 'Số lớn nhất: ' + max + '<br>' + 'Trung bình cộng: ' + dem ;
