--- a/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
@@ -11,7 +11,7 @@
     let a = [];
     let dem = 0;
     let max;
-    let n=+prompt('Nhập n: ');
+    let n=+prompt('Nhập độ dài của mảng ');
     for (i = 1; i <= n; i++) {
         a[i] = +prompt('nhap so thu ' + i);
         if (i == 1)
