--- a/BaiTap/ss12/su_dung_ham_2/bai_7.html
+++ b/BaiTap/ss12/su_dung_ham_2/bai_7.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     function doiCho(a,b) {
-        return  ([a,b]=[b,a]);
+        return  ([x,y]=[b,a]);
     }
     let x = +prompt('Nhập số a ');
     let y = +prompt('Nhập số b ');
