--- a/BaiTap/ss11/luyen_tap_mang_2/bai_5.html
+++ b/BaiTap/ss11/luyen_tap_mang_2/bai_5.html
@@ -6,22 +6,22 @@
 </head>
 <body>
 <script>
-    let chain1= prompt('Nhập chuỗi thứ 1: ');
-    let chain2= prompt('Nhập chuỗi thứ 2: ');
+    let chain1 = prompt('Nhập chuỗi thứ 1: ');
+    let chain2 = prompt('Nhập chuỗi thứ 2: ');
     let arr1 = chain1.split(' ');
     let arr2 = chain2.split(' ');
-    let kiemTra = true;
-    if (arr1.length === arr2.length){
-        for (let i =0; i<arr1.length;i++){
-            if (arr1[i] === arr2[i]){
-                kiemTra = true;
-            }else {
+    let check = true;
+    if (arr1.length === arr2.length) {
+        for (let i = 0; i < arr1.length; i++) {
+            if (arr1[i] === arr2[i]) {
+                check = true;
+            } else {
                 document.write('Hai mảng khác nhau');
-                kiemTra = false;
+                check = false;
                 break;
             }
         }
-        if (kiemTra){
+        if (check) {
             document.write('Hai mảng giống nhau');
         }
     }
