--- a/BaiTap/ss11/luyen_tap_mang_1/bai_2.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_2.html
@@ -8,7 +8,7 @@
 <div id="bai_2"></div>
 <script>
     let arr = [];
-    let dem = 1;
+    let count = 1;
     let max;
     for (let i = 1; i <= 10; i++) {
         arr[i] = +prompt('nhập số phần tử i: ');
@@ -16,10 +16,10 @@
             max = +arr[1];
         } else if (+arr[i] > max) {
             max = +arr[i];
-            dem = i;
+            count = i;
         }
     }
-    document.getElementById('bai_2').innerHTML = 'Số lớn nhất là: ' + max + '<br>' + ' Nằm ở vị trí ' + dem;
+    document.getElementById('bai_2').innerHTML = 'Số lớn nhất là: ' + max + '<br>' + ' Nằm ở vị trí ' + count;
 </script>
 </body>
 </html>
