--- a/BaiTap/ss12/su_dung_ham_1/bai_5.html
+++ b/BaiTap/ss12/su_dung_ham_1/bai_5.html
@@ -10,7 +10,7 @@
     let star2 = ["Ursa Minor", "Tarurus", "Cygnus", "Lyra", "Aquila", "Ursa Major", "Leo"];
     function kiemTra(star) {
         for (let i=0; i<star1.length; i++){
-            if (star1[i]==star){
+            if (star1[i]===star){
                 return i;
             }
         }
