--- a/BaiTap/ss12/su_dung_ham_2/bai_7.html
+++ b/BaiTap/ss12/su_dung_ham_2/bai_7.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    function doiCho(a,b) {
+    function swap(a,b) {
         return  ([x,y]=[b,a]);
     }
     let x = +prompt('Nhập số a ');
     let y = +prompt('Nhập số b ');
-    document.write('Sau khi đổi chỗ '+ doiCho(x,y));
+    document.write('Sau khi đổi chỗ '+ swap(x,y));
 </script>
 </body>
 </html>
