--- a/BaiTap/ss11/luyen_tap_mang_1/bai_2.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_2.html
@@ -10,7 +10,7 @@
     let arr = [];
     let count = 1;
     let max;
-    for (let i = 1; i <= 10; i++) {
+    for (let i = 0; i < 10; i++) {
         arr[i] = +prompt('nhập số phần tử i: ');
         if (i === 1) {
             max = +arr[1];
