--- a/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
+++ b/BaiTap/ss11/luyen_tap_mang_1/bai_3.html
@@ -14,11 +14,13 @@
     let n = +prompt('Nhập độ dài của mảng ');
     for (i = 1; i <= n; i++) {
         a[i] = +prompt('nhap so thu ' + i);
-        if (i == 1)
+        if (i == 1){
             max = a[1];
-        if (a[i] > max)
+        }
+        if (a[i] > max){
             max = a[i];
-        count += a[i];
+            count += a[i];
+        }
     }
     count /= n;
     document.getElementById('bai3').innerHTML = 'Số lớn nhất: ' + max + '<br>' + 'Trung bình cộng: ' + count;
