--- a/BaiTap/ss12/su_dung_ham_2/bai_9.html
+++ b/BaiTap/ss12/su_dung_ham_2/bai_9.html
@@ -14,11 +14,11 @@
     function check() {
         for (let i = 0; i < length; i++) {
             arr[i] = prompt('Nhập phần tử thứ ' + i);
-            if (kiTu == arr[i]) {
+            if (kiTu === arr[i]) {
                 count++;
             }
         }
-        if (count == 0) {
+        if (count === 0) {
             return -1;
         } else {
             return 'Có ' + count + ' lần xuât hiện';
