--- a/BaiTap/ss12/su_dung_ham_2/bai_4.html
+++ b/BaiTap/ss12/su_dung_ham_2/bai_4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    function kiemTra() {
+    function check() {
         kyTu = prompt('nhập ký tự vào');
         if (kyTu == +kyTu) {
             alert('true ' + kyTu + ' Nó là ký tự số ');
@@ -15,7 +15,7 @@
         }
     }
 
-    let b = kiemTra();
+    let b = check();
 </script>
 </body>
 </html>
