--- a/BaiTap/ss12/su_dung_ham_1/bai_4.html
+++ b/BaiTap/ss12/su_dung_ham_1/bai_4.html
@@ -5,17 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-    <script>
-        function addNumbers() {
-            firstNum = 4;
-            secondNum = 8;
-            result = firstNum + secondNum;
-            return result;
-        }
-        result = 0;
-        alert(result);
-        result = addNumbers();
-        alert(result);
-    </script>
+<script>
+    let result;
+
+    function addNumbers() {
+        let firstNum = 4;
+        let secondNum = 8;
+        result = firstNum + secondNum;
+        return result;
+    }
+
+    result = 0;
+    alert(result);
+    result = addNumbers();
+    alert(result);
+</script>
 </body>
 </html>
