--- a/BaiTap/ss12/su_dung_ham_2/bai_8.html
+++ b/BaiTap/ss12/su_dung_ham_2/bai_8.html
@@ -12,7 +12,7 @@
         arr[i] = +prompt('nhập vào các phần tử ');
     }
 
-    function kiemTra(arr1) {
+    function check(arr1) {
         let arr2 = [];
         for (let j = n; j >= 0; j--) {
             arr2.push(arr1[j]);
@@ -21,7 +21,7 @@
     }
 
     document.write('Mảng vừa nhập : ' + arr + '<br>');
-    document.write('Kết quả: ' + kiemTra(arr));
+    document.write('Kết quả: ' + check(arr));
 </script>
 </body>
 </html>
