--- a/BaiTap/ss13/hinh_chu_nhat.html
+++ b/BaiTap/ss13/hinh_chu_nhat.html
@@ -48,7 +48,7 @@
     let canvas = document.getElementById('canvasRectangle');
     let ctx = canvas.getContext('2d');
     ctx.fillStyle = '#fa2ade';
-    ctx.fillRect(10, 10, width, long)
+    ctx.fillRect(10, 10, width, long);
 
 </script>
 </body>
