--- a/BaiTap/ss13/cong_tac_va_bong_den.html
+++ b/BaiTap/ss13/cong_tac_va_bong_den.html
@@ -34,15 +34,15 @@
         }
     }
 
-    let electricLamp1 = new ElectricLamp(false)
-    let switchButton1 = new SwitchButton(false,electricLamp1)
+    let electricLamp1 = new ElectricLamp(false);
+    let switchButton1 = new SwitchButton(false,electricLamp1);
 
     switchButton1.connectToLamp(electricLamp1);
     for (let i=0;i<10;i++){
-        document.write('Bật công tắc: '+switchButton1.switchOn())
-        document.write('<br>')
-        document.write('Tắt công tắc: '+switchButton1.switchOff())
-        document.write('<br>')
+        document.write('Bật công tắc: '+switchButton1.switchOn());
+        document.write('<br>');
+        document.write('Tắt công tắc: '+switchButton1.switchOff());
+        document.write('<br>');
     }
 
 </script>
