--- a/BaiTap/bai_tap_nang_cao/mang_va_loop/so_xuat_hien_o_mang_b_nhung_k_xuat_hien_o_mang_a.html
+++ b/BaiTap/bai_tap_nang_cao/mang_va_loop/so_xuat_hien_o_mang_b_nhung_k_xuat_hien_o_mang_a.html
@@ -6,7 +6,16 @@
 </head>
 <body>
 <script>
-    let
+    let chain1 = prompt('Nhập chuỗi thứ 1: ');
+    let chain2 = prompt('Nhập chuỗi thứ 2: ');
+    let arr1 = chain1.split('');
+    let arr2 = chain2.split('');
+    for (let i = 0; i < arr1.length; i++) {
+        if (arr2.indexOf(arr1[i])>-1){
+            arr2.splice(arr2.indexOf(arr1[i]),1);
+        }
+    }
+    document.write(arr2);
 </script>
 </body>
 </html>
