--- a/BaiTap/bai_tap_nang_cao/mang_va_loop/mang_so_nguyen.html
+++ b/BaiTap/bai_tap_nang_cao/mang_va_loop/mang_so_nguyen.html
@@ -11,8 +11,7 @@
     let arr1 = [];
     let count = 0;
 
-    function prefixSums()
-    {
+    function prefixSums(a) {
 
         for (let i = 0; i < n; i++) {
             arr[i] = +prompt('Nhập phần tử thứ ' + i);
@@ -21,7 +20,9 @@
             count += +arr[j];
             arr1.push(count);
         }
+        return arr1;
     }
+
     document.write(prefixSums(arr1));
 </script>
 </body>
