--- a/BaiTap/ss13/mo_ta_temperature.html
+++ b/BaiTap/ss13/mo_ta_temperature.html
@@ -20,10 +20,10 @@
         }
     }
     let temperature = new Temperature(25);
-    let my_fahrenheit = temperature.fahrenheit();
-    let my_kelvins = temperature.kelvins();
+    let myFahrenheit = temperature.fahrenheit();
+    let myKelvins = temperature.kelvins();
 
-    document.write("Nhiet do K: "+my_kelvins + '<br>' + "Nhiet do F: " + my_fahrenheit);
+    document.write("Nhiet do K: "+myKelvins + '<br>' + "Nhiet do F: " + myFahrenheit);
 </script>
 </body>
 </html>
