--- a/BaiTap/bai_tap_nang_cao/mang_va_loop/phan_so.html
+++ b/BaiTap/bai_tap_nang_cao/mang_va_loop/phan_so.html
@@ -14,14 +14,16 @@
     for (i = 0; i < n; i++) {
         numerator[i] = prompt('Nhập số phần tử thứ: ' + i);
         denominator[i] = prompt('Nhập số phần tử thứ: ' + i);
-        if (i == 0)
-            max = (+numerator[i]) / (+denominator[i])
-        if ((+numerator[i]) / (+denominator[i]) > max)
-            max = (+numerator[i]) / (+denominator[i])
+        if (i == 0) {
+            max = (+numerator[i]) / (+denominator[i]);
+        }
+        if ((+numerator[i]) / (+denominator[i]) > max) {
+            max = (+numerator[i]) / (+denominator[i]);
+        }
     }
-    document.write('Chi so lon nhat : ' + Math.ceil(max)+'<br>');
-    document.write('Tử số: '+numerator+'<br>');
-    document.write('Mẫu số: '+denominator+'<br>');
+    document.write('Chỉ số lớn nhất : ' + Math.ceil(max) + '<br>');
+    document.write('Tử số: ' + numerator + '<br>');
+    document.write('Mẫu số: ' + denominator + '<br>');
 </script>
 </body>
 </html>
