--- a/BaiTap/case_study/String/dem_so_tu_khac_nhau.html
+++ b/BaiTap/case_study/String/dem_so_tu_khac_nhau.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    function demo(kyTu){
+    function differentSymbolsNaive(kyTu){
         let kyTu1 = kyTu.split("");
         let kyTu2 =[];
         let count =0;
@@ -19,7 +19,7 @@
         return document.write("Các ký tự khác nhau: "+kyTu2+"<br>"+" có "+count +" kí tự khác nhau.");
     }
     let kyTu = prompt('Nhập chuỗi ký tự ');
-    demo(kyTu);
+    differentSymbolsNaive(kyTu);
 </script>
 </body>
-</html
+</html>
