--- a/BaiTap/case_study/xay_dung_giao_dien/Xay_dung_giao_dien.html
+++ b/BaiTap/case_study/xay_dung_giao_dien/Xay_dung_giao_dien.html
@@ -7,7 +7,7 @@
 <body>
 <table style="width: 100%; height: 100px; background: lightpink">
     <tr>
-        <td colspan="2" style="height: 100px;width: 50px;"><img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/image8-2.jpg?width=893&height=600&name=image8-2.jpg" style="width: 110px"></td>;
+        <td colspan="2" style="height: 100px;width: 50px;"><img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/image8-2.jpg?width=893&height=600&name=image8-2.jpg" style="width: 110px"></td>
         <th>Hệ thống quản lý bài tập CaseStudy module 1</th>
     </tr>
 </table>
